--- a/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
+++ b/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
@@ -29,12 +29,12 @@ Size=414,715
 Collapsed=0
 
 [Window][Server Window]
-Pos=13,11
-Size=418,705
+Pos=20,18
+Size=697,959
 Collapsed=0
 
 [Window][Logging window]
-Pos=445,13
-Size=546,703
+Pos=744,-24
+Size=594,982
 Collapsed=0
 
