--- a/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
+++ b/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="ScreenGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Game\banner.jpg">
