--- a/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
+++ b/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Source Files\stb">
       <UniqueIdentifier>{68164975-0231-4bd9-bedb-eea974904fc7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Memory Stream">
+      <UniqueIdentifier>{209c292f-3e84-436f-b5b7-9373c17fbb94}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -110,6 +113,9 @@
     </ClCompile>
     <ClCompile Include="ScreenGame.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MemoryStream.cpp">
+      <Filter>Header Files\Memory Stream</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -202,6 +208,15 @@
     </ClInclude>
     <ClInclude Include="ScreenGame.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ByteSwap.h">
+      <Filter>Header Files\Memory Stream</Filter>
+    </ClInclude>
+    <ClInclude Include="MemoryStream.h">
+      <Filter>Header Files\Memory Stream</Filter>
+    </ClInclude>
+    <ClInclude Include="Messages.h">
+      <Filter>Header Files\Memory Stream</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
