--- a/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
+++ b/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="ScreenGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="memory stream\MemoryStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -201,6 +204,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScreenGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="memory stream\Messages.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="memory stream\ByteSwap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="memory stream\MemoryStream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
