Welcome sound (async) (XD)

--- a/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
+++ b/Lab03/Networks - Client-Server-Starter/Networks.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="memory stream\MemoryStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Audio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -213,6 +216,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="memory stream\MemoryStream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
