--- a/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
+++ b/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
@@ -9,7 +9,7 @@ Size=285,424
 Collapsed=0
 
 [Window][Main Menu]
-Pos=11,11
+Pos=7,11
 Size=357,634
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=472,959
 Collapsed=0
 
 [Window][Logging window]
-Pos=514,2
-Size=564,982
+Pos=508,-27
+Size=564,1011
 Collapsed=0
 
