Clients leaving working. Fixed delete messages order.

--- a/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
+++ b/Lab03/Networks - Client-Server-Starter/Game/imgui.ini
@@ -24,7 +24,7 @@ Size=312,427
 Collapsed=0
 
 [Window][Client Window]
-Pos=8,9
+Pos=5,11
 Size=553,713
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=472,959
 Collapsed=0
 
 [Window][Logging window]
-Pos=514,2
+Pos=555,-12
 Size=564,982
 Collapsed=0
 
