Can compile in release mode.

--- a/Lab03/Networks - Client-Server-Starter/Networks.vcxproj
+++ b/Lab03/Networks - Client-Server-Starter/Networks.vcxproj
@@ -214,6 +214,7 @@
     </ClCompile>
     <ClCompile Include="memory stream\MemoryStream.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="ModuleNetworkingClient.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
