--- a/Multiplayer Game/Game/imgui.ini
+++ b/Multiplayer Game/Game/imgui.ini
@@ -9,7 +9,7 @@ Size=285,424
 Collapsed=0
 
 [Window][Main Menu]
-Pos=9,9
+Pos=2,6
 Size=210,704
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Logging / Profiling]
 Pos=229,508
 Size=769,208
+Collapsed=0
+
+[Window][Scoreboard]
+Pos=591,67
+Size=242,319
 Collapsed=0
 
