Showing player stats on server.

--- a/Multiplayer Game/Game/imgui.ini
+++ b/Multiplayer Game/Game/imgui.ini
@@ -29,8 +29,8 @@ Size=280,247
 Collapsed=0
 
 [Window][ModuleNetworking window]
-Pos=9,10
-Size=293,704
+Pos=12,12
+Size=201,701
 Collapsed=0
 
 [Window][Log]
@@ -39,12 +39,17 @@ Size=682,175
 Collapsed=0
 
 [Window][Logging / Profiling]
-Pos=229,508
-Size=769,208
+Pos=225,611
+Size=769,107
 Collapsed=0
 
 [Window][Scoreboard]
-Pos=591,67
+Pos=759,13
 Size=242,319
+Collapsed=0
+
+[Window][Stats]
+Pos=725,540
+Size=271,65
 Collapsed=0
 
